JCH - Configuracion authorization